fix the height of logo on mobile phones

--- a/styles/components/logo.module.scss
+++ b/styles/components/logo.module.scss
@@ -20,7 +20,7 @@
         text-decoration: none;
         @media (max-width: 800px) {           
             width: 100px;
-            height: 3558px;
+            height: 35px;
         }
     } 
 }
